# epos4py

./: .gitignore  README.md  clean.py  compile.bat  cpp_build.py  pyproject.toml  requirements.txt  setup.py
cpp_wrapper/: EposPy.cpp
epos_python/: PrecitecCHRoco2.py  __init__.py  __main__.py
epos_python/cpp_wrapper/: EposPy.cpp
